# schemese

./: .gitignore  CMakeLists.txt  README.md  bootstrap.sh  hack.sh  operator.diff
include/schemese/: parser.h  scanner.h
lib/: .parser.cc.swp  parser.cc  scanner.cc  scanner_definitions.cc  scanner_definitions.l  schemese.cc  token.cc
test/: parser_test.cc  scanner_test.cc  token_test.cc
